--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,10 @@
  *= require_tree .
  *= require_self
  */
+
+.new_button {
+  font-size: 12px;
+  font-weight: normal;
+  color: red;
+  float: right
+}
