--- a/app/views/dream/show.html.erb
+++ b/app/views/dream/show.html.erb
@@ -4,14 +4,14 @@
 
 <p>
   期限は<%= @dream.due %>
-  <%= link_to '[ちょっと変更]', edit_dream_path(@dream), class: "command" %>
-  <%= link_to '[削除]', dream_path(@dream), method: :delete, class: "command", data: { confirm: 'ほんと？' } %>
+  <%= link_to '[夢変更]', edit_dream_path(@dream), class: "command" %>
+  <%= link_to '[夢削除]', dream_path(@dream), method: :delete, class: "command", data: { confirm: 'ほんと？' } %>
 </p>
 
 <% if @dream.projects.any? %>
   <% @dream.projects.each do |project| %>
-  <h3 class:"project">Lv.<%= project.level %>--<%= project.name %></h3>
-  <p>期限：<%= project.due %></p>
+  <h3 class:"project"> Lv.<%= project.project_level %> ー <%= project.name %> </h3>
+  <p><%= project.due %></p>
     <% if project.tasks.any? %>
       <ul>
       <% project.tasks.each do |task| %>
@@ -22,9 +22,9 @@
       </ul>
     <% end %>
 
-    <%= form_for([project, project.tasks.build], url: {controller: :task, action: :create, project_id: project.id}) do |f| %>
-    <p><%= f.text_field :name %></p>
-    <p><%= f.submit %></p>
+    <%= form_for([project, project.tasks.build], url: { controller: :task, action: :create, dream_id: @dream.id, project_id: project.id }) do |f| %>
+    <p>タスク名<%= f.text_field :name %><%= f.submit %></p>
+    <%= f.hidden_field :is_done, value: 0 %>
 
     <% end %>
   <% end %>
@@ -32,7 +32,7 @@
 
 <h3>新規project追加</h3>
 <%= form_for([@dream, @dream.projects.build], url: { controller: :project, action: :create, dream_id: @dream }) do |f| %>
-<h4>Lv.<%= f.number_field :level %></h4>
+<h4>Lv.<%= f.number_field :project_level %></h4>
 <h4>プロジェクト名<%= f.text_field :name %></h4>
 <%= f.hidden_field :is_done, value: 0 %>
 <p>期限：<%= f.date_field :due %></p>
