--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -1,7 +1,7 @@
 <h1 class:"title">My Dream Factory</h1>
 <h3 class:"title_button">
-  <%= link_to "[Daily Tasks]", daily_path %>
+  <%= link_to "[今日と明日と明々後日]", daily_path %>
 </h3>
 <h3 class:"title_button">
-  <%= link_to "[Dreams]", dream_index_path %>
+  <%= link_to "[夢一覧]", dream_index_path %>
 </h3>
