--- a/app/views/dream/new.html.erb
+++ b/app/views/dream/new.html.erb
@@ -1,4 +1,4 @@
-<h1>What is your new Dream?</h1>
+<h1>ワクワクを言語化して！</h1>
 <%= form_for :dream, url: dream_index_path do |f| %>
 <p>
   <%= f.text_field :name, placeholder: 'enter your dream' %>
