その他完成

--- a/app/views/dream/index.html.erb
+++ b/app/views/dream/index.html.erb
@@ -1,4 +1,4 @@
-<h1>My Dreams</h1>
+<h1>夢一覧</h1>
 <p>
   <%= link_to '[新夢作成]', new_dream_path, class: 'new' %>
   <%= link_to '[トップへ]', top_path, class: "return" %>
