--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -5,3 +5,6 @@
 <h3 class:"title_button">
   <%= link_to "[夢一覧]", dream_index_path %>
 </h3>
+<h3 class:"title_button">
+  <%= link_to "[その他一覧]", yet_dream_index_path %>
+</h3>
